--- a/cv.tex
+++ b/cv.tex
@@ -116,12 +116,12 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
+\Huge{Vineel Kumar Chanda} \\[7.5pt]
+\href{https://github.com/vineelchanda}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
+\href{https://www.linkedin.com/in/vineel-kumar-84386b118/}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
 \href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\href{mailto:vineelchanda@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ vineelchanda@gmail.com} \ $|$ \ 
+\href{tel:+91 9542018989}{\raisebox{-0.05\height}\faMobile \ :+91 9542018989} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -130,23 +130,35 @@
 
 %Interests/ Keywords/ Summary
 \section{Summary}
-This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
+Experienced software developer with a strong computer science background and 4 years of experience developing robust and scalable backend solutions. Proficient in Kony platform, data structures and algorithms, and a variety of programming languages. Demonstrated ability to deliver projects on time and within budget while maintaining high quality standards.
+This CV can also be automatically complied and published using GitHub Actions. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
 
 %Experience
 \section{Work Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Jan 2021 - present \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+\textbf{Software Engineer(iTribe)} & \hfill Feb 2021 - present \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+Experience in building cutting-edge scalable systems using NestJS. Skilled in writing simple and efficient code, optimizing APIs, and developing integrations. Adept at monitoring system uptime and errors to drive product reliability. Committed to taking ownership and ensuring code quality, elegance, and robust infrastructure in all projects
+}  \\
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Mar 2019 - Jan 2021 \\[3.75pt]
+\textbf{Software Engineer(Kony Labs)} & \hfill Aug 2018 - Feb 2021 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] long long line of blah blah that will wrap when the table fills the column width
-        \item[--] again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
+    \item[--] Development of Mobile and web applications using Kony Fabric, Kony
+Visualizer which is a cross-platform mobile application development
+platform for Android, iOS etc. Worked with end-to-end app development and
+developing reusable components.
+Add-on features on Kony banking suite for sales consultants, Wallet
+application, Banking for teens, Fitness savings application 
+        \item[--] Automation of Rebranding of Kony Banking suites.Reduce the manual intervention of work by developing an automated
+rebranding script which changes the UI look and feels
+Implemented across a range of teams including development, production
+and testing.
+        
     \end{itemize}
     \end{minipage}
 }
@@ -165,13 +177,14 @@ This CV is automatically generated and deployed using the \href{https://github.c
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
+2014 - 2018 & Bachelor's Degree (CSE) at \textbf{Sreenidhi institute of science and technology} \hfill \normalsize (GPA: 7.2/10) \\ 
+
+2023 - 2027 &Class 12th Some Board \textbf{sri chaitanya junior college} \hfill (GPA: 4.0/4.0) \\ 
 
 2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
 
-2022 & Class 12th Some Board \hfill  (Grades) \\
 
-2021 & Class 10th Some Board \hfill  (Grades) \\
+2012 & Class 10th State Board \hfill  (88%) \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
